objects/Deal_Desk_Ask__c.object
<CustomObject>
    <fields>
        <fullName>Amendments__c</fullName>
        <inlineHelpText>Can only be edited by Deal Desk</inlineHelpText>
        <label>Amendments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Ask_Status__c</fullName>
        <inlineHelpText>Can only be edited by Deal Desk</inlineHelpText>
        <label>Ask Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>In Review</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Amended by Deal Desk - Approved</fullName>
                </value>
                <value>
                    <fullName>Tabled/Pending</fullName>
                </value>
                <value>
                    <fullName>Not Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Deal_Desk_Review__c</fullName>
        <label>Deal Desk Review</label>
        <referenceTo>Deal_Desk_Review__c</referenceTo>
        <relationshipLabel>Deal Desk Asks</relationshipLabel>
        <relationshipName>Deal_Desk_Asks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Description_of_Exception__c</fullName>
        <label>Description of Exception</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Follow_Up_Items__c</fullName>
        <inlineHelpText>Can only be edited by Deal Desk</inlineHelpText>
        <label>Follow Up Items</label>
        <type>TextArea</type>
    </fields>
    <description>For sales reps to request asks of Deal Desk</description>
    <label>Deal Desk Ask</label>
    <nameField>
        <displayFormat>DDA-{0000000}</displayFormat>
        <label>Record No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deal Desk Asks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Decription_Locked_after_New</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(ISNEW()) &amp;&amp; ISCHANGED( Description_of_Exception__c ) &amp;&amp; NOT(ISPICKVAL( Ask_Status__c , "New")) &amp;&amp;  NOT(CONTAINS($Profile.Name, "Administrator"))</errorConditionFormula>
        <errorDisplayField>Description_of_Exception__c</errorDisplayField>
        <errorMessage>After Status is updated this field is locked.  Please ask your System Administrator for assistance if needed.</errorMessage>
    </validationRules>
</CustomObject>